# mdrop

./: Cargo.toml  README.md  flake.nix
mdrop/: Cargo.toml
mdrop-cli/: Cargo.toml
mdrop-cli/src/: main.rs
mdrop-gui/: Cargo.toml
mdrop-gui/src/: main.rs
mdrop/src/: filter.rs  gain.rs  indicator_state.rs  lib.rs  volume.rs  volume_level.rs
