[workspace]
members = [
    "mdrop",
    "mdrop-cli",
    "mdrop-gui",
]
resolver = "2"

[workspace.package]
authors = [ "frahz <me@frahz.dev>" ]
license = "MIT"
edition = "2024"

[workspace.dependencies]
mdrop = { path = "mdrop" }

clap = { version = "4.5", features = ["derive"] }
futures-lite = "2.6"
nusb = "0.1"
tabled = "0.18"
usb-ids = "1"

[profile.release]
strip = "symbols"
