[package]
name = "mdrop-cli"
version = "0.3.0"
authors.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "mdrop"
path = "src/main.rs"

[dependencies]
mdrop.workspace = true
clap.workspace = true
futures-lite.workspace = true
nusb.workspace = true
tabled.workspace = true
env_logger.workspace = true
log.workspace = true
