[package]
name = "mdrop-gui"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
mdrop.workspace = true

# use this until segfault is fixed in crates.io
iced = { git = "https://github.com/iced-rs/iced", rev = "fb2544021a40d029a99cadda7cf59acf5e7dc455", features = ["svg"] }
